Changelog
=========


2.2 (unreleased)
----------------

- Use the ISendableDocsContainer behavior instead of directly provide the interface.
  Issue #1568 Dokument aus Aufgabe versenden resp. kopieren
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1568
  [phgross]

- Activate tabbedview quickupload plugin also for inboxes.
  Issue #549 Abklaerung: Drag and drop
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/549
  [phgross]

- Adjust encoding of title accessor values in tests. Since the dexterity update it returns always utf-8.
  Issue #1420 Plone Version und Dexterity Version auf aktuellste Version heben.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1420
  [phgross]

- User get_css_class instead of deprecated method: css_class_from_obj/css_class_from_brain
  [eschmutz]


2.1 (2012-02-27)
----------------

- Added French translations
  [ttschanz]

- Inbox assigned tasks view: Listing tasks in all states, not just open
  [lgraf]

- rebuild forwarding functionality
    - modify Transitioncontroller and tests
    - changed forwarding workflow (guards, actions)
    - added wizzards for different transitions

  [phgross]

- Removed 'List folder contents' permission from anyone but Manager in
  forwarding, inbox and yearfolder workflows.
  [lgraf]

- Added necessary permissions for Administrator role
  [lgraf]


2.0 (2011-11-17)
----------------

- Final release
  [phgross]


2.0b10 (2011-09-29)
-------------------

- Issue #1176 alle translatinos mit from zope.i18n import translate
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1176
  [eschmutz]

- Issue #1163 Frage zur Weiterleitung (vgl. auch Ticket 1012)
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1163
  Disable renaming documents when assigning forwarding to dossier
  [jbaumann]

- Changed imports of ogds models to new opengever.ogds.models package
  [jbaumann]
