@@ -1,23 +1,20 @@
 """Contains the Code for forwarding content type    """
 from Acquisition import aq_inner, aq_parent
-from five import grok
+from Products.CMFCore.interfaces import IActionSucceededEvent
+from Products.statusmessages.interfaces import IStatusMessage
 from datetime import datetime
+from five import grok
+from opengever.inbox import _
+from opengever.ogds.base.autocomplete_widget import AutocompleteFieldWidget
+from opengever.ogds.base.utils import get_client_id
+from opengever.task import _ as task_mf
+from opengever.task.task import ITask, Task
 from plone.directives import form
 from plone.directives.dexterity import AddForm
-from Products.statusmessages.interfaces import IStatusMessage
-from Products.CMFCore.interfaces import IActionSucceededEvent
 from z3c.form.interfaces import HIDDEN_MODE
 from zope import schema
 from zope.app.container.interfaces import IObjectAddedEvent
-from zope.interface import implements, Interface
-
-from ftw.contentmenu.interfaces import IContentmenuPostFactoryMenu
-from opengever.inbox import _
-from opengever.inbox.inbox import IInbox
-from opengever.ogds.base.utils import get_client_id
-from opengever.ogds.base.autocomplete_widget import AutocompleteFieldWidget
-from opengever.task import _ as task_mf
-from opengever.task.task import ITask, Task
+from zope.interface import implements
 
 
 class IForwarding(ITask):
@@ -163,33 +160,3 @@ def store_in_yearfolder(context, event):
     if event.action == 'forwarding-transition-close':
         return context.REQUEST.RESPONSE.redirect(
             '%s/@@store_forwarding_in_yearfolder' % context.absolute_url())
-
-
-class RemoveForwardingFactoryMenuEntry(grok.MultiAdapter):
-    """In Inboxes we should not be able to add forwardings using the factory
-    menu, but only by selecting a task and clicking the "Forward"
-    folder_contents button in the documents tab.
-    So we need to remove the "create forwarding" action from the factory
-    menu.
-    """
-
-    grok.adapts(IInbox, Interface)
-    grok.implements(IContentmenuPostFactoryMenu)
-
-    def __init__(self, context, request):
-        self.context = context
-        self.request = request
-
-    def __call__(self, factories):
-        new_factories = []
-
-        for factory in factories:
-            if isinstance(factory, dict) and \
-                    factory.get('id', None) == 'opengever.inbox.forwarding':
-                # remove the forwarding action
-                pass
-
-            else:
-                new_factories.append(factory)
-
-        return new_factories
